[gd_scene load_steps=4 format=3 uid="uid://bvflowtivbxvn"]

[ext_resource type="Script" path="res://Scripts/Menus/high_scores_panel.gd" id="1_dtgif"]
[ext_resource type="Texture2D" uid="uid://dlloxxecitrn3" path="res://Arts/Gfx/Panels/help panel.png" id="2_gkn1x"]

[sub_resource type="Shortcut" id="Shortcut_mf6hy"]

[node name="HallOfFamePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false
script = ExtResource("1_dtgif")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
action_mode = 0
shortcut = SubResource("Shortcut_mf6hy")
shortcut_in_tooltip = false
texture_normal = ExtResource("2_gkn1x")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_direction = 1
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="HallOfFame-Logo" type="TextureRect" parent="CenterContainer/VBoxContainer"]
layout_direction = 1
layout_mode = 2

[node name="GameType" type="Label" parent="CenterContainer/VBoxContainer"]
layout_direction = 1
layout_mode = 2
text = "Dummy Game type"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScores-Items" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[connection signal="pressed" from="CenterContainer/TextureButton" to="." method="_on_texture_button_pressed"]
